# exercise.nuvo

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  conf.py  pyproject.toml
demo_app/: demo_app.py  run_demo_app.py
flask_service/: text2code_service.py
src/: demo_app.py  run_demo_app.py  text2code.py
src/exercise_nuvo/: conf.py  main.py  test.ipynb
