[project]
name = "exercise.nuvo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Sergei Savin", email = "spsavin@gmail.com" }]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.options]
add = ["-d", "--save-compatible"]

[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
dev = ["streamlit~=1.30", "langchain~=0.1", "langchain-openai~=0.0"]
basic = ["ipykernel~=6.29", "ipywidgets~=8.1", "python-dotenv~=1.0"]
